# MSign

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.build  Dockerfile.webbuild  Jenkinsfile  Jenkinsfile.web  LICENSE  README.md  get_sizes.py  requirements.txt  update_sign.zsh  upload_stm.cfg
bmap/: .gitignore  README.md  bmap.py  fnter.py  obj2bin.py  obj2meshcpp.py  requirements.txt
bmap/icons/: delivery.xcf
bmap/testfnt/: CMakeLists.txt  testfnt.cpp
bmap/testfnt/cmake/: getfontname.py
board/: .gitignore  contbrd.brd  contbrd.sch  eagle.epf  msign-laser.dxf  schematic.brd  schematic.sch
caplog/: .gitignore  README.md  bheap_instrument.gdb  btestgen.py  dissasembledump.py  dissect.py  dumpviewer.html  esp_serial_bkpts.gdb  regiondump.py  slotlib.py  slotlib_inner.py
cfgserver/: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt  setup.py
esp/: .clangd  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build_nmfu.py  idf_export.sh  platformio.ini  sdkconfig.defaults
esp/components/bearssl/: CMakeLists.txt
esp/main/: CMakeLists.txt  Kconfig.projbuild  config.cpp  config.h  configldr.cpp  debug.cpp  dupm.cpp  dupm.h  dwhttp.cpp  dwhttp.h  json.cpp  json.h  main.cpp  protocol.cpp  protocol.h  sd.cpp  sd.h  sdlog.cpp  serial.cfg.h  serial.cpp  serial.h  stime.cpp  stime.h  upd.cpp  upd.h  upd_web.cpp  utf.cpp  utf.h  util.cpp  util.h  webui.cfg.h  webui.cpp  webui.h  wifi.cpp  wifi.h  wifitime.cfg.h  wifitime.cpp  wifitime.h
esp/main/grabber/: cfgpull.cfg.h  cfgpull.cpp  cfgpull.h  grab.cpp  grab.h  modelserve.cfg.h  modelserve.cpp  modelserve.h  octoprint.cfg.h  octoprint.cpp  octoprint.h  octoprintbitmap.cpp  octoprintbitmap.h  parcels.cfg.h  parcels.cpp  parcels.h  sccfg.cfg.h  sccfg.cpp  sccfg.h  tdsb.cpp  tdsb.h  ttc.cfg.h  ttc.cpp  ttc.h  weather.cfg.h  weather.cpp  weather.h  weathersummarizer.cpp  weathersummarizer.h
esp/main/grabber/transit/: common.cfg.h  common.cpp  gtfs.cfg.h  gtfs.cpp  gtfs.h  ttc.cfg.h  ttc.cpp  ttc.h
esp/main/parser/: gcode_scan.nmfu  gtfs_tripupdate.nmfu  http_chunked_recv.nmfu  http_client.nmfu  http_serve.nmfu  multipart_header.nmfu  tdsb_logintoken.nmfu  ttc_rdf.nmfu
espweb/: .gitignore  generate_caupdate.py  generate_sd.py  generate_sysupdate.py  generate_webupdate.sh  generate_webupdate.zsh  package.json  vite.config.js  webpack.config.js
fnter/: README.md  generate.py
pwr/: CMakeLists.txt  toolchain.cmake
pwr/cfg/: FreeRTOSConfig.h
pwr/ld/: g0.ld
pwr/src/: main.cpp  manual_box.h  rcc.cpp  regman.cpp  regman.h  startup.s  system.c  tskmem.cpp  tskmem.h  ucpd.cpp  ucpd.h
sim/: .gitignore  CMakeLists.txt  README.md  arduino-source-patch.patch  logtime.py  mergelog.py  stmbutton.py
sim/cfg/esp/: FreeRTOSConfig.h  lwipopts.h
sim/cfg/stm/: FreeRTOSConfig.h
sim/cmake/: copy.py
sim/src/: draw.cpp  gpio.h  main.cpp  matrix.h  nvic.cpp  nvic.h  rcc.cpp  rcc.h  rng.cpp  rng.h  srv.cpp  srv.h
sim/src/common/: bootcmd.h
sim/src/esp/: SdFat.h  config.cpp  debug.cpp  esp_log.c  esp_log.h  esp_system.h  esp_task_wdt.h  main.cpp  modelserve.cpp  protocol.cpp  sd.cpp  sim_main.cpp  stime.cpp  time.cpp  upd.cpp  util.cpp  util.h  webui.cpp  wifi.cpp  wifitime.cpp  wifitime_sim.cpp
sim/src/esp/esp8266/: eagle_soc.h
sim/src/esplwip/: sys_arch.c
sim/src/esplwip/include/arch/: cc.h
sim/src/esplwip/include/netif/: tapif.h
sim/src/esplwip/netif/: tapif.c
sim/src/fonts/: dejavu_10.h  dejavu_8.h  latob_12.h
sim/src/stm/: gpio.h  main.cpp  matrix.h  nvic.cpp  protocol.cpp  rcc.cpp  rng.cpp  srv.cpp  stm32f2xx_ll_system.h  stm32f2xx_ll_usart.h  ui.cpp  ui_impl.cpp
sim/src/stm/crash/: main.cpp  main.h
sim/src/tasks/: clock.h  dispman.cpp  threed.cpp  threed.h  timekeeper.cpp  timekeeper.h  weather.cpp  weather.h
sim/utils/: CMakeLists.txt  jdump.cpp  wtest.cpp
src/: gpio.h  main.cpp  matrix.h  rcc.cpp  rng.cpp
stm/: .clangd  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  get_ver.py  openocd-f4.cfg  openocd.cfg  platformio.ini  toolchain-clang.cmake  toolchain.cmake
stm/cfg/: FreeRTOSConfig.h  stm32f2xx_hal_conf.h  stm32f4xx_hal_conf.h
stm/dbg/: create_blob.py
stm/ld/: app.ld  f2.ld  f207zg.ld  f4.ld
stm/src/: color.h  draw.cpp  draw.h  gpio.h  intmath.h  lru.h  main.cpp  matrix.h  mintime.cpp  mintime.h  nvic.cpp  nvic.h  pins.h  protocol.cpp  protocol.h  ramfunc.h  rcc.cpp  rng.cpp  rng.h  sched.h  schedef.h  srv.cpp  srv.h  startup.s  system.c  tskmem.cpp  tskmem.h  ui.cpp  ui.h  vstr.cpp  vstr.h
stm/src/common/: .clangd  bheap.cpp  bheap.h  bootcmd.c  bootcmd.h  heapsize.h  lru.h  slots.h  util.c  util.cpp  util.h  ver.h
stm/src/crash/: decode.cpp  decode.h  isr.cpp  isrtable.s  main.cpp  main.h  mindraw.cpp  mindraw.h  rtos.cpp  rtos.h  simplematrix.h  srvd.cpp  srvd.h
stm/src/fonts/: comic_14.h  dejavu_10.cpp  dejavu_10.h  dejavu_12.cpp  dejavu_12.h  dejavu_8.cpp  dejavu_8.h  freesans_14.h  lato_12.h  latob_10.cpp  latob_10.h  latob_11.cpp  latob_11.h  latob_12.cpp  latob_12.h  latob_15.cpp  latob_15.h  lcdpixel_6.cpp  lcdpixel_6.h  tahoma_9.cpp  tahoma_9.h  vera_7.cpp  vera_7.h  vera_8.cpp  vera_8.h
stm/src/libc/: mem.c  printf.c  str.c
stm/src/libc/include/: math.h  stdio.h  string.h  time.h
stm/src/screens/: base.h  clock.cpp  clock.h  octoprint.cpp  octoprint.h  parcels.cpp  parcels.h  tdsb.cpp  tdsb.h  tetris.cpp  tetris.h  threed.h  ttc.cpp  ttc.h  weather.cpp  weather.h
stm/src/screens/threed/: fixed.cpp  fixed.h  mesh.h  threed.cpp
stm/src/tasks/: adc_calibration.cpp  calfix.cpp  calfix.h  clock.cpp  clock.h  debug.cpp  debug.h  dispman.cpp  dispman.h  menu_overlay.cpp  mesh.cpp  mesh.h  screen.cpp  screen.h  teapot.cpp  threed.cpp  threed.h  timekeeper.cpp  timekeeper.h  ttc.cpp  ttc.h  weather.cpp  weather.h
stmboot/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  platformio.ini  toolchain-clang.cmake
stmboot/boards/: msign.json
stmboot/ld/: boot.ld  f207zg.ld
stmboot/src/: main.c  memset.c  memset.h  showline.inc  startup.s
upd/: upd.py
(+216 files in other folders)
